Add routes & fix dev

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "julienparis",
   "version": "1.0.0",
-  "description": "Site personnel Julien paris",
+  "description": "Here is my personal open-source website",
   "author": "Neijul <pro.julienparis@gmail.com>",
   "private": true,
   "scripts": {
