--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-node_modules
-<<<<<<< HEAD
-package-lock.json
-=======
-package-lock.json
->>>>>>> c11c2352ff4a36de528030ca8980e2291f711108
+.DS_Store
+node_modules/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
